# dr-md

./: .gitignore  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  VERSION  docker-compose.yml  test_doc.md
crates/egui_commonmark/: .cargo_vcs_info.json  Cargo.toml
crates/egui_commonmark/src/: elements.rs  lib.rs  mermaid.rs
crates/egui_commonmark/src/parsers/: comrak.rs  pulldown.rs
docs/: ARCHITECTURE.md  ASSETS.md  BUILD.md  CONFIGURATION.md  PACKAGING.md  PLAN.md  SHORTCUTS.md  USAGE.md
patches/: egui_commonmark_customizations.patch  migration_plan.md
scratch/merman_test/: Cargo.toml
scratch/merman_test/src/: main.rs
scripts/: generate_assets.py  generate_icons.py  generate_logo.py  package_deb.sh  package_rpm.sh
src/: main.rs
src/app/: commands.rs  editor_window.rs  explorer.rs  menu_bar.rs  mod.rs  state.rs  tab_bar.rs
src/config/: mod.rs
src/editor/: buffer.rs  cursor.rs  mod.rs  renderer.rs  selection.rs  undo.rs
src/explorer/: mod.rs  tree.rs
src/keymap/: mod.rs
src/markdown/: mod.rs  parser.rs  preview.rs
src/workspace/: mod.rs  vault.rs  watcher.rs
