[package]
name = "dr-md"
version = "0.2.4"
edition = "2024"

[dependencies]
eframe = "0.27"
egui = "0.27"
image = { version = "0.25", default-features = false, features = ["png"] }
egui_commonmark = { version = "0.15.0", features = ["better_syntax_highlighting", "fetch", "svg"] }
urlencoding = "2.1.3"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
rfd = "0.14"
arboard = "3.6.1"
url = "2.5"
regex = "1.10"

[patch.crates-io]
egui_commonmark = { path = "crates/egui_commonmark" }

[profile.release]
# opt-level = 3          # Maximize speed optimizations
# lto = true             # Enable Link-Time Optimization (increases execution speed)
# codegen-units = 1      # Set codegen units to 1 for maximum LTO optimization scope
# strip = true           # Remove symbols and debug information to shrink binary size

[profile.release-optimized]
inherits = "release"
opt-level = 3          # Maximize speed optimizations
lto = true             # Enable Link-Time Optimization (increases execution speed)
codegen-units = 1      # Set codegen units to 1 for maximum LTO optimization scope
strip = true           # Remove symbols and debug information to shrink binary size
